# gary_example_repo

./: README.md  manifest.yaml
components/example_component/: example_component.yaml
components/example_component/commands/: default  default.sh  easter  example  leds  sounds  teleop_keyboard
components/example_component/dockerfiles/: jetsonorin.dockerfile  x86_64.dockerfile
gary_example_package/: CMakeLists.txt  package.xml  setup.cfg  setup.py
gary_example_package/config/: leds_config.yaml
gary_example_package/gary_example_package/: example_engine.py
gary_example_package/launch/: example.launch.py  example_launch.py  example_package.launch.py
gary_example_package/resource/: example_engine.py
gary_example_package/src/: example_engine.cpp
